# Software_2023

./: .gitmodules  LICENSE  README.md
SPEAR-Webcam-Image-Transfer-Python--main/: serverServer.py
camera(Backup_Indy)/: basic-tutorial-3  client.py  server.py
camera_indy/: client.py  server.py  test_client.py  test_server.py  tutroial.py
camera_networking/: README.md  Server.py  armClient.py  armServer.py  demo_servo_server.py  frame_test.py  get_webpage_info.py  mainCameraClient.py  mainCameraServer.py  servoClient.py  servoMotorClient.py  servoMotorServer.py  servoServer.py  test_client.py  test_server.py
description/: CMakeLists.txt  package.xml
description/config/: joint_names_Arm Full Assembly.yaml
description/launch/: display.launch
description/meshes/: base_link.STL
description/urdf/: Arm Full Assembly.csv
install/: local_setup.sh  setup.sh
log/: latest_build
navigation/: connect_wifi.py  get_webpage_info.py  get_wifi_server.py  gpsCoordinates.py  gpsServer.py
ros_can/: package.xml  setup.py
src (iron faulty)/arm_control/: setup.py
src /description/: rviz_config.rviz  setup.py
src /joy_control/: CMakeLists.txt  package.xml
src /moveit_config/: .setup_assistant  package.xml
src /moveit_config_deprecated/: .setup_assistant  package.xml
src /moveit_spear/: .setup_assistant  package.xml
src /moveitservo/: package.xml  setup.cfg  setup.py
src /ros_can/: package.xml
src /spear_servo/: .setup_assistant  package.xml
src/arm_full_assembly/: CMakeLists.txt  package.xml
src/arm_full_assembly/launch/: display.launch.py  gazebo.launch
(+139 files in other folders)
